<resources>
    <string name="app_name">The War</string>
    <string name="language_choose">Please choose a language</string>
    <string name="game_title">THE WAR</string>
    <string name="start_game">START GAME</string>
    <string name="game_rules">GAME RULES</string>
    <string name="options">OPTIONS</string>
    <string name="quit">QUIT</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="quit_game">\tAre you sure you want\n\tto quit the game?</string>
    <string name="yes_quit">YES</string>
    <string name="no_quit">NO</string>
    <string name="rules_content">\t\tThe deck of cards is divided into two parts, then each player gets one part.
        The first and the second player simultaneously draw one card and compare their values.
        The player with the higher card value picks up the cards and places them underneath his deck.
        If the cards have the same value (e.g.: queen vs. queen), the war is starting.
        During the war, you should uncover one card and place it on your uncovered cards (pattern to the top),
        then draw the next card, put on the covered cards and then they are compared.
        The higher value card wins, and the winner of the war receives all cards used in the war.
        Repeat this step if you can not find a winner again during the war.\n\n
        \t\tThe one who first takes away all the cards from the opponent wins. Collected cards are put into the bottom
        of the deck and can later be used many times, which is why the game can take a very long time.
        However, you can stop it at any time. In this case, the winner is the player with more cards.
    </string>
    <string name="back">BACK</string>
    <string name="cards">Cards:</string>
    <string name="end_game">End the game</string>
    <string name="sounds">Sounds</string>
    <string name="english">English</string>
    <string name="polski">Polski</string>
    <string name="langGroupHeader">Language:</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="restart_game">Restart the game</string>
    <string name="sounds_on">The sounds in the game have been turned on.</string>
    <string name="sounds_off">The sounds in the game have been muted.</string>
    <string name="want_to_play_with">Choose who you want to play with:</string>
    <string name="another_player">PLAY WITH \nANOTHER PLAYER</string>
    <string name="with_android">PLAY WITH ANDROID</string>
    <string name="enter_a_first_player_name">Enter a first player name:</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_a_second_player_name">Enter a second player name:</string>
    <string name="player_name_error">The player\'s name must contain at least one letter and from 1 to 10 characters.</string>
    <string name="finish_the_game">\tAre you sure you want\n\tto finish the game?</string>
    <string name="restart_the_game">\tAre you sure you want\n\tto restart the game?</string>
    <string name="p2CardDesc">A card for second player.</string>
    <string name="p1CardDesc">A card for first player.</string>
    <string name="p1WarCard1Desc">A first war card for first player.</string>
    <string name="p1WarCard2Desc">A second war card for first player.</string>
    <string name="p2WarCard1Desc">A first war card for second player.</string>
    <string name="p2WarCard2Desc">A second war card for second player.</string>
</resources>
