<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cards">

    <Button
        android:id="@+id/backButtonOptions"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonshape"
        android:text="@string/back"
        android:textColor="@color/gold_text"
        android:textOn="@string/sounds_on"
        android:textOff="@string/sounds_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/soundsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/switch2_marginStart"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:checked="true"
        android:text="@string/sounds"
        android:textColor="@color/gold_text"
        android:textOff="@string/sounds_off"
        android:textOn="@string/sounds_on"
        android:theme="@style/AppSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/languageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/soundsSwitch">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langGroupHeader"
            android:textColor="@color/gold_text" />

        <RadioButton
            android:id="@+id/eng_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_red"
            android:text="@string/english"
            android:textColor="@color/gold_text"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/pl_lang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/dark_red"
            android:text="@string/polski"
            android:textColor="@color/gold_text"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <Button
        android:layout_width="148dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/rate_this_app"
        android:textColor="@color/gold_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageGroup" />


</android.support.constraint.ConstraintLayout>